test/type/fail/expr_id.j
class A { Void main() {return;} }
class B {
  Int a() {
    return 5 + a;
  }
}
